distribution/kubernetes/overlays/standalone/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podcast-server
spec:
  rules:
    - host: TO_BE_DEFINED
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /data
            pathType: Prefix
            backend:
              service:
                name: storage
                port:
                  number: 9000
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ui
                port:
                  number: 80
